<resources>
    <string name="app_name">LocalMusicPlayer</string>
    <string name="music_name_text">一眼万年</string>
    <string name="music_during_text">时长：4:00</string>
    <string name="home_text">首页</string>
    <string name="song_list_text">歌单</string>
    <string name="search_text">搜索</string>
    <string name="music_list_artist">小江</string>
    <string name="lyric_text">好歌词在此</string>
    <string name="show">显示</string>
</resources>
